feat: signin, signup and other changes