@@ -4,6 +4,7 @@ import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import dk.dtu.compute.course02324.part4.consuming_rest.model.Game;
+import dk.dtu.compute.course02324.part4.consuming_rest.model.Player;
 import dk.dtu.compute.course02324.part4.consuming_rest.model.User;
 import javafx.application.Application;
 import javafx.application.Platform;
@@ -18,6 +19,8 @@ import org.springframework.web.client.RestClientException;
 import org.springframework.web.client.RestTemplate;
 
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 public class GameSignUpClient extends Application {
     private static final String BASE_URL = "http://localhost:8080/roborally";
@@ -26,6 +29,7 @@ public class GameSignUpClient extends Application {
 
     private User currentUser;
     private ListView<String> gameListView;
+    private List<Game> games;
 
     public static void main(String[] args) {
         launch(args);
@@ -35,13 +39,11 @@ public class GameSignUpClient extends Application {
     public void start(Stage primaryStage) {
         MenuBar menuBar = createMenuBar();
         gameListView = new ListView<>();
-        Button createGameButton = new Button("Create New Game");
-        createGameButton.setOnAction(e -> createGame());
 
-        VBox root = new VBox(menuBar, gameListView, createGameButton);
+        VBox root = new VBox(menuBar, gameListView);
         root.setSpacing(10);
         root.setPadding(new Insets(10));
-        primaryStage.setScene(new Scene(root, 400, 600));
+        primaryStage.setScene(new Scene(root, 600, 400));
         primaryStage.setTitle("Game Sign-Up Client");
         primaryStage.show();
     }
@@ -49,15 +51,27 @@ public class GameSignUpClient extends Application {
     private MenuBar createMenuBar() {
         Menu userMenu = new Menu("User");
         MenuItem signUp = new MenuItem("Sign Up");
-        signUp.setOnAction(e -> signUpUser());
         MenuItem signIn = new MenuItem("Sign In");
+        MenuItem signOut = new MenuItem("Sign Out");
+        signUp.setOnAction(e -> signUpUser());
         signIn.setOnAction(e -> signInUser());
-        userMenu.getItems().addAll(signUp, signIn);
+        signOut.setOnAction(e -> signOutUser());
+        userMenu.getItems().addAll(signUp, signIn, signOut);
 
         Menu gameMenu = new Menu("Games");
         MenuItem showGames = new MenuItem("Show Open Games");
+        MenuItem joinGame = new MenuItem("Join Selected Game");
+        MenuItem leaveGame = new MenuItem("Leave Selected Game");
+        MenuItem deleteGame = new MenuItem("Delete Selected Game");
+        MenuItem startGame = new MenuItem("Start Selected Game");
+        MenuItem createGame = new MenuItem("Create New Game");
         showGames.setOnAction(e -> updateGameList());
-        gameMenu.getItems().add(showGames);
+        joinGame.setOnAction(e -> joinSelectedGame());
+        leaveGame.setOnAction(e -> leaveSelectedGame());
+        deleteGame.setOnAction(e -> deleteSelectedGame());
+        startGame.setOnAction(e -> startSelectedGame());
+        createGame.setOnAction(e -> createGame());
+        gameMenu.getItems().addAll(showGames, joinGame, leaveGame, deleteGame, startGame, createGame);
 
         return new MenuBar(userMenu, gameMenu);
     }
@@ -65,14 +79,20 @@ public class GameSignUpClient extends Application {
     private void signUpUser() {
         TextInputDialog dialog = new TextInputDialog();
         dialog.setHeaderText("Enter username to register:");
-        dialog.showAndWait().ifPresent(username -> {
+        Optional<String> result = dialog.showAndWait();
+        if (currentUser != null) {
+            showAlert("Error", "You are already signed in as " + currentUser.getName() + ", please sign out first.");
+            return;
+        }
+        result.ifPresent(username -> {
             try {
                 User user = new User();
                 user.setUsername(username);
-                restTemplate.postForEntity(BASE_URL + "/users", user, User.class);
-                showAlert("Success", "Registered user " + username);
+                ResponseEntity<User> resp = restTemplate.postForEntity(
+                        BASE_URL + "/users", user, User.class);
+                currentUser = resp.getBody();
+                showAlert("Success", "Registered and signed in as " + currentUser.getName());
             } catch (RestClientException ex) {
-                ex.printStackTrace();
                 showAlert("Error", "Registration failed: " + ex.getMessage());
             }
         });
@@ -81,21 +101,36 @@ public class GameSignUpClient extends Application {
     private void signInUser() {
         TextInputDialog dialog = new TextInputDialog();
         dialog.setHeaderText("Enter username to sign in:");
-        dialog.showAndWait().ifPresent(username -> {
+        Optional<String> result = dialog.showAndWait();
+        result.ifPresent(username -> {
             try {
-                ResponseEntity<String> response = restTemplate.getForEntity(
-                        BASE_URL + "/users?username=" + username, String.class);
-                List<User> users = parseList(response.getBody(), new TypeReference<List<User>>() {});
-                if (!users.isEmpty()) {
-                    currentUser = users.get(0);
-                    showAlert("Success", "Signed in as " + username);
-                } else {
-                    showAlert("Error", "User not found");
-                }
+                ResponseEntity<User> response = restTemplate.postForEntity(
+                        BASE_URL + "/users/login?username=" + username,
+                        null,
+                        User.class
+                );
+                currentUser = response.getBody();
+                showAlert("Success", "Signed in as " + currentUser.getName());
             } catch (Exception ex) {
                 showAlert("Error", "Sign in failed: " + ex.getMessage());
+                ex.printStackTrace();
             }
         });
+    }
+
+    private void signOutUser() {
+        if (currentUser == null) {
+            showAlert("Error", "No user is currently signed in.");
+            return;
+        }
+        try {
+            restTemplate.postForEntity(
+                    BASE_URL + "/users/logout", currentUser, Void.class);
+            showAlert("Success", "Signed out " + currentUser.getName());
+            currentUser = null;
+        } catch (Exception ex) {
+            showAlert("Error", "Sign out failed: " + ex.getMessage());
+        }
     }
 
     private void updateGameList() {
@@ -103,18 +138,27 @@ public class GameSignUpClient extends Application {
             try {
                 ResponseEntity<String> response = restTemplate.getForEntity(
                         BASE_URL + "/games/opengames", String.class);
-                List<Game> games = parseList(response.getBody(), new TypeReference<List<Game>>() {});
-                gameListView.getItems().setAll(
-                        games.stream()
-                                .map(game -> game.getName()
-                                        + " (" + game.getPlayers().size()
-                                        + "/" + game.getMaxPlayers() + ")")
-                                .toList()
-                );
+                games = parseList(response.getBody(), new TypeReference<List<Game>>() {
+                });
+                gameListView.getItems().setAll(games.stream()
+                        .map(g -> formatGameString(g))
+                        .collect(Collectors.toList()));
             } catch (Exception ex) {
                 showAlert("Error", "Could not fetch games: " + ex.getMessage());
             }
         });
+    }
+
+    private String formatGameString(Game g) {
+        int joined = g.getPlayers() != null ? g.getPlayers().size() : 0;
+        return String.format("[%d] %s (%d/%d) owner=%s",
+                g.getUid(), g.getName(), joined, g.getMaxPlayers(), g.getOwner().getName());
+    }
+
+    private Game getSelectedGame() {
+        int idx = gameListView.getSelectionModel().getSelectedIndex();
+        if (idx < 0 || games == null || idx >= games.size()) return null;
+        return games.get(idx);
     }
 
     private void createGame() {
@@ -175,6 +219,101 @@ public class GameSignUpClient extends Application {
         });
     }
 
+    private void joinSelectedGame() {
+        Game g = getSelectedGame();
+        if (g == null) {
+            showAlert("Error", "No game selected");
+            return;
+        }
+        if (g.getOwner().getUid() == currentUser.getUid()) {
+            showAlert("Error", "Owner cannot join its own game");
+            return;
+        }
+        if (g.getPlayers().size() >= g.getMaxPlayers()) {
+            showAlert("Error", "Game is full");
+            return;
+        }
+        try {
+            // Send join request via dedicated endpoint, no body
+            restTemplate.postForEntity(
+                    BASE_URL + "/games/" + g.getUid() + "/join?userId=" + currentUser.getUid() + "&name=" + currentUser.getName(),
+                    null,
+                    Player.class
+            );
+            showAlert("Success", "Joined game " + g.getName());
+            updateGameList();
+        } catch (RestClientException ex) {
+            ex.printStackTrace();
+            showAlert("Error", "Join failed: " + ex.getMessage());
+        }
+    }
+
+
+    private void leaveSelectedGame() {
+        Game g = getSelectedGame();
+        if (g == null) {
+            showAlert("Error", "No game selected");
+            return;
+        }
+        Optional<Player> me = g.getPlayers().stream()
+                .filter(p -> p.getUser().getUid() == currentUser.getUid()).findFirst();
+        if (me.isEmpty()) {
+            showAlert("Error", "You are not in that game");
+            return;
+        }
+        long pid = me.get().getUid();
+        try {
+            restTemplate.delete(BASE_URL + "/players/" + pid);
+            showAlert("Success", "Left game " + g.getName());
+            updateGameList();
+        } catch (Exception ex) {
+            showAlert("Error", "Leave failed: " + ex.getMessage());
+        }
+    }
+
+    private void deleteSelectedGame() {
+        Game g = getSelectedGame();
+        if (g == null) {
+            showAlert("Error", "No game selected");
+            return;
+        }
+        if (g.getOwner().getUid() != currentUser.getUid()) {
+            showAlert("Error", "Only owner can delete");
+            return;
+        }
+        try {
+            restTemplate.delete(BASE_URL + "/games/" + g.getUid() + "?userId=" + currentUser.getUid());
+            showAlert("Success", "Deleted game " + g.getName());
+            updateGameList();
+        } catch (Exception ex) {
+            showAlert("Error", "Delete failed: " + ex.getMessage());
+        }
+    }
+
+    private void startSelectedGame() {
+        Game g = getSelectedGame();
+        if (g == null) {
+            showAlert("Error", "No game selected");
+            return;
+        }
+        if (g.getOwner().getUid() != currentUser.getUid()) {
+            showAlert("Error", "Only owner can start");
+            return;
+        }
+        if (g.getPlayers().size() < g.getMinPlayers()) {
+            showAlert("Error", "Not enough players to start");
+            return;
+        }
+        try {
+            restTemplate.put(BASE_URL + "/games/" + g.getUid() + "/start" + "?userId=" + currentUser.getUid(), null);
+            showAlert("Success", "Started game " + g.getName());
+            updateGameList();
+        } catch (Exception ex) {
+            ex.printStackTrace();
+            showAlert("Error", "Start failed: " + ex.getMessage());
+        }
+    }
+
     private <T> List<T> parseList(String json, TypeReference<List<T>> typeRef) throws Exception {
         JsonNode root = mapper.readTree(json);
         if (root.isArray()) {
@@ -191,9 +330,11 @@ public class GameSignUpClient extends Application {
     }
 
     private void showAlert(String title, String msg) {
-        Alert alert = new Alert(Alert.AlertType.INFORMATION);
-        alert.setTitle(title);
-        alert.setContentText(msg);
-        alert.showAndWait();
+        Platform.runLater(() -> {
+            Alert alert = new Alert(Alert.AlertType.INFORMATION);
+            alert.setTitle(title);
+            alert.setContentText(msg);
+            alert.showAndWait();
+        });
     }
 }
